@@ -3,4 +3,5 @@
 \fIwest, east, south,\fP and \fInorth\fP specify the Region of interest, and you may specify them
 in decimal degrees or in [+-]dd:mm[:ss.xxx][W|E|S|N] format.  Append \fBr\fP if lower left and upper right
 map coordinates are given instead of w/e/s/n.  The two shorthands OPT(Rg) and OPT(Rd) stand for global domain
-(0/360 and -180/+180 in longitude respectively, with -90/+90 in latitude).
+(0/360 and -180/+180 in longitude respectively, with -90/+90 in latitude). Alternatively, specify the name
+of an existing grid file and the OPT(R) settings (and OPT(I), OPT(F), if applicable) are copied from the grid.
